[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "careerflow-ai"
version = "0.1.0"
description = "Local-first job discovery assistant for hh.ru"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.44,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
