[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "careerflow-ai"
version = "0.1.0"
description = "Local-first job discovery assistant for hh.ru"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "streamlit",
  "sqlalchemy",
  "pydantic",
  "pydantic-settings",
  "typer",
  "python-dotenv",
  "pytest",
]

[tool.setuptools]
packages = ["app", "app.core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
